--- a/jquery.multilevelpushmenu.css
+++ b/jquery.multilevelpushmenu.css
@@ -9,20 +9,32 @@
 
 .multilevelpushmenu_wrapper .levelHolderClass {
 	position: absolute;
-	margin-left: -100%;
 	overflow: hidden;
-	left: 0;
 	top: 0;
 	background: #336ca6;
 	width: auto;
 	min-height: 100%;
 	font-family: 'Open Sans Condensed', sans-serif;
 	font-size: 1em;
+	zoom: 1;
+}
+
+.multilevelpushmenu_wrapper .ltr {
+	margin-left: -100%;
+	left: 0;
 	-moz-box-shadow: 5px 0 5px -5px #1f4164;
 	-webkit-box-shadow: 5px 0 5px -5px #1f4164;
 	box-shadow: 5px 0 5px -5px #1f4164;
 	filter: progid:DXImageTransform.Microsoft.Shadow(color=#1f4164,direction=90,strength=2);
-	zoom: 1;
+}
+
+.multilevelpushmenu_wrapper .rtl {
+	margin-right: -100%;
+	right: 0;
+	-moz-box-shadow: 5px 0 5px 5px #1f4164;
+	-webkit-box-shadow: 5px 0 5px 5px #1f4164;
+	box-shadow: 5px 0 5px 5px #1f4164;
+	filter: progid:DXImageTransform.Microsoft.Shadow(color=#1f4164,direction=270,strength=2);
 }
 
 .multilevelpushmenu_wrapper .multilevelpushmenu_inactive {
@@ -31,9 +43,10 @@
 
 .multilevelpushmenu_wrapper h2 {
 	font-size: 1.5em;
+	line-height: 1em;
 	font-weight: bold;
 	color: #1f4164;
-	padding: 0 10px 0 20px;
+	padding: 0 .4em 0 .4em;
 }
 
 .multilevelpushmenu_wrapper ul {
@@ -45,7 +58,7 @@
 .multilevelpushmenu_wrapper li {
 	cursor: pointer;
 	border-top: 1px solid #295685;
-	padding: 10px 10px 10px 20px;
+	padding: .4em .4em .4em .4em;
 }
 
 .multilevelpushmenu_wrapper li:last-child {
@@ -61,6 +74,8 @@
 	outline: none;
 	overflow: hidden;
 	font-size: 1.5em;
+	line-height: 1em;
+	padding: .2em .2em;
 	text-decoration: none;
 	color: #fff;
 }
@@ -71,7 +86,7 @@
 
 .multilevelpushmenu_wrapper .backItemClass {
 	display: block;
-	padding: 10px 10px 10px 20px;
+	padding: .4em .4em .4em .4em;
 	background: #2e6196;
 	border-top: 1px solid #295685;
 }
@@ -80,10 +95,18 @@
 	float: right;
 }
 
+.multilevelpushmenu_wrapper .floatLeft {
+	float: left;
+}
+
 .multilevelpushmenu_wrapper .cursorPointer {
 	cursor: pointer;
 }
 
-.multilevelpushmenu_wrapper .iconSpacing {
-	padding: 0 10px 0 0;
+.multilevelpushmenu_wrapper .iconSpacing_ltr {
+	padding: 0 .4em 0 0;
+}
+
+.multilevelpushmenu_wrapper .iconSpacing_rtl {
+	padding: 0 0 0 .4em;
 }
