--- a/demo/jquery.multilevelpushmenu_red.css
+++ b/demo/jquery.multilevelpushmenu_red.css
@@ -37,7 +37,7 @@
 	filter: progid:DXImageTransform.Microsoft.Shadow(color=#870000,direction=270,strength=2);
 }
 
-.mlpm_w .multilevelpushmenu_inactive {
+.mlpm_w .mlpm_inactive {
 	background: #ba0011;
 }
 
