--- a/jquery.multilevelpushmenu.min.scss
+++ b/jquery.multilevelpushmenu.min.scss
@@ -80,12 +80,12 @@
         border-top: 1px solid #295685;
         cursor: pointer;
         padding: .4em .4em .4em .4em;
-        li:hover {
-            background-color: #295685;
-        }
-        :last-child {
-            border-bottom: 1px solid #295685;
-        }
+    }
+    li:hover {
+        background-color: #295685;
+    }
+    li:last-child {
+        border-bottom: 1px solid #295685;
     }
     ul {
         list-style: none;
